--- a/vm/makefile
+++ b/vm/makefile
@@ -8,7 +8,7 @@ CXXFLAGS = -Wall -std=c++17 -g
 -include $(patsubst %.cc, build/deps/%.d, $(wildcard *.cc))
 
 build/deps/%.d: %.cc | build/deps
-	$(CXX) $(CXXFLAGS) -E -MMD -MT build/$*.o -MF $@ $< > /dev/null 2>&1
+	@$(CXX) $(CXXFLAGS) -E -MMD -MT build/$*.o -MF $@ $< > /dev/null 2>&1
 
 build/%.o: %.cc | build
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
